--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://cdn.prod.website-files.com/6471ebc32c5012b32f0e45ba/66bb60133cd655a19e801a12_zGoA462j1czfEm4NHsCvW_ED-AcoVFbXDPIk9heJUxg.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Template Project</title>
+    <title>Map Generator</title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
